--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 
 <body>
+<script type="text/javascript" src="js/jquery-3.1.0.min.js"></script>
+
 <div class="contenedor">
 <a style="width: 150px; display: inline-block; margin: 10px 0 20px 0px; text-decoration: none; padding: 5px; border-radius: 3px; background-color: #f2f2f2; font-size: 11px;" href="index_en.html">English Version</a>
 	<div class="header">
@@ -32,5 +34,6 @@
 	</div>
 	
 </div>
+<script type="text/javascript" src="js/functions.js"></script>
 </body>
 </html>
