--- a/index.html
+++ b/index.html
@@ -35,5 +35,12 @@
 	
 </div>
 <script type="text/javascript" src="js/functions.js"></script>
+<script type="text/javascript">
+	document.addEventListener("deviceready", onDeviceReady, false);
+	function onDeviceReady() {
+	    window.open = cordova.InAppBrowser.open;
+	    alert("device ready");
+	}
+</script>
 </body>
 </html>
