--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
 	</div>
 	
 </div>
-<script type="text/javascript" src="js/functions.js"></script>
+
+<script src='phonegap.js'></script>
 <script type="text/javascript">
 	document.addEventListener("deviceready", onDeviceReady, false);
 	function onDeviceReady() {
@@ -42,5 +43,6 @@
 	    alert("device ready");
 	}
 </script>
+<script type="text/javascript" src="js/functions.js"></script>
 </body>
 </html>
