--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 	</div>
 
 	<div class="botones">
-		<a href="https://www.sayas.com.mx/Sayas/acceso/forma/SNTE/SNTE" target="_blank" class="boton-snte"><img src="images/snte-beneficios-seguros-auto.png"></a>
-		<a href="https://www.sntebeneficios.org.mx/viajes/" target="_blank" class="boton-snte"><img src="images/snte-beneficios-viajes.png"></a>
-		<a href="http://sntebeneficios.org.mx/registro.php" target="_blank" class="boton-snte"><img src="images/snte-beneficios-registrate.png"></a>
+		<a href="https://www.sayas.com.mx/Sayas/acceso/forma/SNTE/SNTE" target="_blank" class="boton-snte linkexterno"><img src="images/snte-beneficios-seguros-auto.png"></a>
+		<a href="https://www.sntebeneficios.org.mx/viajes/" target="_blank" class="boton-snte linkexterno"><img src="images/snte-beneficios-viajes.png"></a>
+		<a href="http://sntebeneficios.org.mx/registro.php" target="_blank" class="boton-snte linkexterno"><img src="images/snte-beneficios-registrate.png"></a>
 	</div>
 
 	
@@ -36,13 +36,6 @@
 </div>
 
 <script src='phonegap.js'></script>
-<script type="text/javascript">
-	document.addEventListener("deviceready", onDeviceReady, false);
-	function onDeviceReady() {
-	    window.open = cordova.InAppBrowser.open;
-	    alert("device ready");
-	}
-</script>
 <script type="text/javascript" src="js/functions.js"></script>
 </body>
 </html>
