--- a/index_en.html
+++ b/index_en.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+<script type="text/javascript" src="js/jquery-3.1.0.min.js"></script>
 <div class="contenedor">
 <a style="width: 150px; display: inline-block; margin: 10px 0 20px 0px; text-decoration: none; padding: 5px; border-radius: 3px; background-color: #f2f2f2; font-size: 11px;" href="index.html">Spanish Version</a>
 	<div class="header">
@@ -27,9 +28,9 @@
 		</div>
 
 
-		<a href="https://www.sayas.com.mx/Sayas/acceso/forma/SNTE/SNTE" target="_blank" class="boton-snte"><img src="images/en_snte-beneficios-seguros-auto.png"></a>
-		<a href="http://bit.ly/turisnte" target="_blank" class="boton-snte"><img src="images/en_snte-beneficios-viajes.png"></a>
-		<a href="registro.php" target="_blank" class="boton-snte"><img src="images/en_snte-beneficios-registrate.png"></a>
+		<a href="https://www.sayas.com.mx/Sayas/acceso/forma/SNTE/SNTE" target="_blank" class="boton-snte linkexterno"><img src="images/en_snte-beneficios-seguros-auto.png"></a>
+		<a href="http://bit.ly/turisnte" target="_blank" class="boton-snte linkexterno"><img src="images/en_snte-beneficios-viajes.png"></a>
+		<a href="registro.php" target="_blank" class="boton-snte linkexterno"><img src="images/en_snte-beneficios-registrate.png"></a>
 	</div>
 
 		
@@ -39,6 +40,9 @@
 	</div>
 	
 </div>
+
+<script src='phonegap.js'></script>
+<script type="text/javascript" src="js/functions.js"></script>
 
 </body>
 </html>
