http://www.turisnte.com/

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 	<div class="botones">
 		<a href="https://www.sayas.com.mx/Sayas/acceso/forma/SNTE/SNTE" target="_blank" class="boton-snte linkexterno"><img src="images/snte-beneficios-seguros-auto.png"></a>
-		<a href="https://www.sntebeneficios.org.mx/viajes/" target="_blank" class="boton-snte linkexterno"><img src="images/snte-beneficios-viajes.png"></a>
+		<a href="http://www.turisnte.com/" target="_blank" class="boton-snte linkexterno"><img src="images/snte-beneficios-viajes.png"></a>
 		<a href="http://sntebeneficios.org.mx/registro.php" target="_blank" class="boton-snte linkexterno"><img src="images/snte-beneficios-registrate.png"></a>
 	</div>
 
