--- a/index_en.html
+++ b/index_en.html
@@ -29,7 +29,7 @@
 
 
 		<a href="https://www.sayas.com.mx/Sayas/acceso/forma/SNTE/SNTE" target="_blank" class="boton-snte linkexterno"><img src="images/en_snte-beneficios-seguros-auto.png"></a>
-		<a href="http://bit.ly/turisnte" target="_blank" class="boton-snte linkexterno"><img src="images/en_snte-beneficios-viajes.png"></a>
+		<a href="http://www.turisnte.com/" target="_blank" class="boton-snte linkexterno"><img src="images/en_snte-beneficios-viajes.png"></a>
 		<a href="http://membersbenefits-aft-snte.com/registro.php" target="_blank" class="boton-snte linkexterno"><img src="images/en_snte-beneficios-registrate.png"></a>
 	</div>
 
